# file-checksum

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yaml  release_draft_template.yaml
.github/workflows/: publish_binaries.yml  testing.yaml
file_checksum/: __main__.py
src/: cli.rs  main.rs
tests/: test_main.py
