[package]
name = "file-checksum"
version = "2.0.0"
edition = "2021"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
description = "Generate and validate checksums for files"
documentation = "https://github.com/pbs-data-solutions/file-checksum"
homepage = "https://github.com/pbs-data-solutions/file-checksum"
repository = "https://github.com/pbs-data-solutions/file-checksum"
readme = "README.md"
keywords = ["checksum", "hash"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "checksum"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["suggestions", "derive"] }
colored = "3.0.0"
hex = "0.4.3"
md5 = "0.8.0"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.23.0"
tmp-path = "0.1.2"
