[tool.poetry]
name = "file-checksum"
version = "1.0.0"
description = "Generate and validate checksums for files"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pbs-data-solutions/file-checksum"
homepage = "https://github.com/pbs-data-solutions/file-checksum"
documentation = "https://github.com/pbs-data-solutions/file-checksum"
keywords = ["python", "checksum", "hash"]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
include = ["file_checksum/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "0.9.0"
rich = "13.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "1.3.0"
pre-commit = "3.3.3"
pytest = "7.3.2"
pytest-cov = "4.1.0"
ruff = "0.0.274"
black = "23.3.0"
tomli = {version = "2.0.1", python = "<3.11"}

[tool.poetry.scripts]
checksum = "file_checksum.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=file_checksum --cov-report term-missing --no-cov-on-fail"

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore = ["E501"]
line-length = 100
target-version = "py38"
fix = true
